# https://setuptools.pypa.io/en/latest/userguide/quickstart.html
[build-system]
requires = ["setuptools>=65.5.0"]
build-backend = "setuptools.build_meta"


[project]
name = "caragols"
authors = [
    {name = "Dane Deemer", email = "ddeemer@purdue.edu"},
    {name = "Nathan Denny", email = "ndenny@purdue.edu"}
]
description = "Configuration Sidekick"
requires-python = ">=3.11"
keywords = ["one", "two"]
# license = {text = "BSD-3-Clause"}
classifiers = [
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyyaml==6.*"
]

dynamic = ["version", "readme"]

# [project.scripts]
# my-script = "my_package.module:function"

[project.urls]
Homepage = "https://github.com/ddeemerpurdue/caragols"
# Documentation = ""
Repository = "https://github.com/ddeemerpurdue/caragols"
Changelog = "https://github.com/ddeemerpurdue/caragols/blob/main/CHANGELOG.md"


# [tool.setuptools.packages.find]
# include = ["DataNetwork"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}